<resources>
    <string name="dialog_default_title">Wholesome!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="app_name">Wholesome</string>
    <string name="facebook_app_id">627870190698632</string>
    <string name="action_settings">Settings</string>
    <string name="enter_first_day_of_last_measurement_period">ENTER FIRST DAY OF LAST MENSTRUAL PERIOD:</string>
    <string name="txt_category">CATEGORY:</string>
    <string name="txt_country">COUNTRY:</string>
    <string name="txt_total_calories">CALORIES(kcal)/SERVING:</string>
    <string name="txt_dishname">DISH NAME:</string>
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="year">
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
        <item>2041</item>
        <item>2042</item>
        <item>2043</item>
        <item>2044</item>
        <item>2045</item>
        <item>2046</item>
        <item>2047</item>
        <item>2048</item>
        <item>2049</item>
        <item>2050</item>

    </string-array>
    <string name="approximate_days_of_period_cycle">APPROXIMATE DAYS OF PERIOD CYCLE</string>
    <string name="ovulation_estimate">Ovulation Estimate</string>
    <string-array name="cycle">
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
    </string-array>
    <string-array name="array_spinner_1">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="hours_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="min_array">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
    </string-array>
    <string-array name="lbs_kg_array">
        <item>Lbs</item>
        <item>Kg</item>
    </string-array>
    <string-array name="inch_cm_array">
        <item>Inch</item>
        <item>Cm</item>
    </string-array>
</resources>