<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loading"
    android:layout_width="@dimen/alert_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_popup"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/custom_image"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/imgpsh_fullsize"
        android:visibility="visible" />


    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:text="@string/dialog_default_title"
        android:textColor="#575757"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="#797979"
        android:textSize="14sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fb_share_dialog"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_fb"
            android:visibility="gone" />
        <ImageView
            android:id="@+id/fb_share_intake_dialog"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_fb"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/burn_diary_share_dialog"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_burn_share"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/intake_diary_share_dialog"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_intake_share"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/ok_button"
            style="@style/dialog_blue_button"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/dialog_ok" />

    </LinearLayout>

</LinearLayout>