<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_intake_screen"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/relHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/header_bg_alcohol">

        <ImageView
            android:id="@+id/imgViewGetFav"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/eight"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_favorite" />
        <ImageView
            android:id="@+id/imgViewShare"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_toLeftOf="@+id/imgViewGetFav"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/eight"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            android:scaleType="fitXY"
             />

        <ImageView
            android:id="@+id/imgViewBack"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/icon_backarrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginTop="@dimen/twenty"
            android:layout_toRightOf="@+id/imgViewBack"
            android:text="INTAKE"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/relHeader"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_category"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/fifteen" />

        <RelativeLayout
            android:id="@+id/relCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linTimeText"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                tools:ignore="UselessParent">

                <Spinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/foutyfive"
                    android:layout_weight="1"
                    android:background="@drawable/select_bg"
                    android:drawSelectorOnTop="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|center_vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_dropdwon" />

            </FrameLayout>


        </RelativeLayout>

        <TextView
            android:id="@+id/textViewCountryVeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen"
            android:text="@string/txt_country"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:id="@+id/relCountryVeg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linTimeText"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                tools:ignore="UselessParent">

                <Spinner
                    android:id="@+id/spinnerCountryVeg"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/foutyfive"
                    android:layout_weight="1"
                    android:background="@drawable/select_bg"
                    android:drawSelectorOnTop="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|center_vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_dropdwon" />

            </FrameLayout>


        </RelativeLayout>

        <TextView
            android:id="@+id/textViewDishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen"
            android:text="@string/txt_dishname"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:id="@+id/relDishname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linTimeText"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageFavorite"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="end|center"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_addfavorite" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/imageFavorite"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                tools:ignore="UselessParent">

                <Spinner
                    android:id="@+id/spinnerName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/foutyfive"
                    android:layout_weight="1"
                    android:background="@drawable/select_bg"
                    android:drawSelectorOnTop="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|center_vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_dropdwon" />

            </FrameLayout>


        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relDishname"
            android:layout_marginTop="@dimen/thirty"
            android:background="@drawable/but_calc"
            android:layout_gravity="center"
            android:id="@+id/btnCalculate" />

        <TextView
            android:id="@+id/textCaloriesServing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/txt_total_calories"
            android:visibility="gone"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:id="@+id/relServing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linTimeText"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/relResults"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:id="@+id/textAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#56f625"
                    android:text="550" />
            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>